# kinetic-neurotransmission

./: .gitignore  README.md  main.py  main.py.backup  parameters.py  requirements.txt  setup.cfg
kinetic_neurotransmission/: __init__.py  kinetic_model.py  neuromuscular.py  rate_constant.py  solver.py  stimulation.py  transition.py  transition_state.py
kineuron/: __init__.py  kinetic_model.py  neuromuscular.py  rate_constant.py  solver.py  stimulation.py  transition.py  transition_state.py
presinaptic/: __init__.py  kinetic_state.py  presinaptic_neuron.py  rate_reaction.py  reaction.py  solver.py  stimulation_protocol.py
src/kineuron/: solver.py  transition_state.py
tests/: test_kinetic_model.py  test_rate_constant.py  test_solver.py  test_stimulation.py  test_transition.py  test_transition_state.py
tests/__statics/: test_resting_state.csv  test_run_results.csv
