[metadata]
name = kineuron
version = 0.0.1
author = Alejandro Martínez-Valencia
author_email = vaf.ss4@gmail.com
description = Python implementation of the kinetic model of neuromuscular transmission dynamics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexini-mv/kinetic-neurotransmission
project_urls =
    Bug Tracker = https://github.com/alexini-mv/kinetic-neurotransmission/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = graphviz == 0.19.1; matplotlib == 3.5.1; numpy == 1.21.5; pandas == 1.2.5;

[options.packages.find]
where = src