[metadata]
name = kineuron
version = attr: kineuron.__version__
author = Alejandro Martínez-Valencia
author_email = al.martinez.valencia@gmail.com
description = Python implementation of the kinetic model of neuromuscular transmission dynamics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexini-mv/kinetic-neurotransmission
project_urls =
    Bug Tracker = https://github.com/alexini-mv/kinetic-neurotransmission/issues
    Source = https://github.com/alexini-mv/kinetic-neurotransmission
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    graphviz >=0.19.1
    matplotlib >=3.3.4
    numpy >=1.19.5
    pandas >=1.1.5, <1.3.0
    tqdm >=4.62.3
